<resources>
    <string name="app_name">Anime Info</string>
    <string name="onePiece">One Piece</string>
    <string name="txt_rent">Rent</string>
    <string name="txt_buy">Buy</string>
    <string name="rating">4,9</string>
    <string name="genre">Family</string>
    <string name="percentage">97%</string>
    <string name="similiar">Similiar</string>
    <string name="txt_lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed porttitor purus. Quisque vel pellentesque felis. Morbi quis elit purus. Nunc consequat facilisis justo nec condimentum. Etiam cursus orci vitae augue commodo, ac efficitur lacus varius. Sed sit amet ligula vel quam accumsan rhoncus. Mauris pharetra odio ac ex rutrum, fermentum laoreet leo pretium. Maecenas rutrum dapibus ornare. Sed venenatis accumsan urna, at semper urna condimentum at. Aliquam erat volutpat. Suspendisse dapibus magna ut neque posuere, vel aliquam ante semper.

In metus odio, convallis nec turpis a, tincidunt elementum mi. Nunc non ante vitae odio tempus semper. Quisque a augue eget mauris convallis aliquam. Nam sagittis maximus mauris, eu viverra nunc efficitur et. Fusce commodo metus risus, faucibus ornare lorem dignissim at. Integer vitae nisi tincidunt, fringilla arcu sit amet, euismod ligula. Donec at erat sem.

Fusce in convallis dolor. Mauris varius justo a dapibus varius. In consequat leo at tempus blandit. Donec eget laoreet justo. Duis dapibus nulla eget luctus elementum. Donec sed vestibulum odio. Pellentesque eget velit urna. Donec aliquam sit amet dolor in porttitor. Sed vel odio sit amet enim malesuada sodales quis et lacus. Donec sagittis felis ullamcorper est mollis feugiat. Nulla semper vestibulum elit ac viverra. Nullam molestie justo at consectetur semper.

Morbi a ultricies nisi, vitae accumsan neque. Proin lorem est, imperdiet quis convallis vitae, scelerisque in mi. Aenean at risus orci. Nam malesuada felis nec felis dignissim malesuada. Phasellus nec eleifend nisl. Etiam faucibus libero orci, a suscipit enim semper vitae. Aliquam vulputate sapien posuere, dictum nibh et, vulputate nisi.

Phasellus tristique auctor accumsan. Suspendisse eleifend dui id varius interdum. Praesent et porta nunc. Nullam accumsan blandit luctus. Phasellus tempus pretium nunc at malesuada. Aenean vel sem varius, varius nisl at, rutrum nulla. Fusce eget nibh elit. Sed ac est lobortis libero tempor sodales sodales eu arcu. Curabitur maximus aliquam turpis, eu laoreet sapien lacinia nec. Suspendisse mollis lacus dignissim mauris ultrices, in blandit enim sodales. Sed diam nibh, eleifend sed aliquam a, elementum et erat.

Donec in augue quis mi hendrerit commodo. Suspendisse blandit nisl felis, at ullamcorper eros lobortis vel. Donec a fermentum arcu. Cras felis sem, maximus a nibh et, fringilla facilisis libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce tempor tempus est, at condimentum metus elementum quis. Quisque vehicula at leo nec aliquet. Suspendisse dapibus, lacus ut iaculis sagittis, massa risus facilisis leo, ac condimentum mauris elit sed sem.

Cras dui mi, malesuada non nibh ac, maximus aliquam elit. Sed sodales, urna at porta suscipit, urna odio pretium lacus, ut mattis tortor orci eget purus. Etiam tempor nisl et diam finibus, a tincidunt ex sagittis. Sed nec congue odio. Vivamus convallis vulputate nulla a egestas. Nam ut malesuada quam, in consequat est. Fusce accumsan odio at arcu ultricies lacinia. Mauris non neque et diam rutrum rutrum at ac tortor. Vestibulum congue, nibh vitae sodales laoreet, felis diam suscipit eros, ut varius diam nisi vitae justo. Aenean id elit magna. Etiam eu viverra mi, sit amet bibendum erat. Vestibulum tincidunt ex velit, id pharetra magna posuere non. Integer aliquam luctus velit, id sodales augue mattis vitae. Vivamus at neque orci. Quisque in laoreet libero. Sed vitae felis felis. Fusce interdum, neque vel interdum ultricies, tellus velit luctus eros, ut dapibus nisi orci id metus. Aenean vehicula consectetur aliquet. Mauris dui arcu, porta pulvinar gravida quis, suscipit sit amet nulla. Nam vestibulum eget tellus at imperdiet. Duis sit amet ante ut mauris dapibus vestibulum. Etiam non erat lobortis, posuere ipsum a, ullamcorper lectus. Sed imperdiet ante ornare dolor gravida, sit amet ullamcorper massa lacinia. In magna justo, finibus ut metus ut, congue dignissim mauris. Phasellus ornare vulputate nulla sed semper. Etiam ac aliquet turpis, sit amet bibendum dui. Mauris gravida et est ut efficitur. Integer lacus neque, sagittis non sem vitae, consequat convallis ex. Quisque quis mi et arcu volutpat egestas. Sed faucibus, sem sed bibendum varius, quam ante tincidunt sapien, ac pretium erat sem vel tellus. Suspendisse potenti. Aliquam a mi in urna dapibus cursus. Vivamus lobortis pharetra tortor sit amet ullamcorper. Nullam maximus turpis sed quam tempus malesuada. Vivamus non nisl consequat, volutpat augue id, accumsan nulla. Curabitur id scelerisque risus, at maximus lacus. Nam et dolor commodo, lobortis eros nec, placerat ex. Maecenas ac purus ex. In bibendum nisi sed quam placerat, ut sollicitudin neque interdum. Integer interdum, enim quis semper ornare, quam urna dictum ante, eu interdum arcu tortor vitae arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam egestas enim neque, at malesuada enim porta a. In ac libero ipsum. Donec maximus turpis quis tellus accumsan volutpat finibus eget nulla. Pellentesque lobortis elementum nibh, at pellentesque nisi posuere et. Fusce pretium turpis id augue pharetra, vel pulvinar quam tempus. Fusce tempus odio id magna fringilla, ut scelerisque felis euismod. Etiam vulputate posuere molestie.

    </string>

</resources>